# visualboyadvance-m

./: .appveyor.yml  .clang-format  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  DEVELOPER-MANUAL.md  Flags.cmake  LICENSE  Makefile  README  README.md  VBA-M.kdev4  VBA.sln  VBA.sln.old  VBA.vcproj  VBA.vcproj.7.10.old  VBA2008.sln  VBA2008.vcproj  appveyor.yml  authors.txt  cmake-variants.yaml  debian-build.sh  default.nix  enable-ccache.cmake  gcc-clang-toolchain.cmake  installdeps  installdeps-msys2  installer.nsi  mingw-toolchain.cmake  msvc-toolchain.cmake  mxe-conf.cmake  options.cmake  resource.xrs  (+6 more)
branches/: .cvsignore  AUTHORS  ChangeLog  ChangeLog.1.5.1  ChangeLog.1.7  ChangeLog.1.7.1  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-win.txt  README.CVS  VERSION  acinclude.m4  aclocal.m4  config.guess  configure  configure.in  fix-timestamps
branches/Pre-Wx/debian/: vbam-gtk.menu
branches/Pre-Wx/doc/: DevInfo.txt  License.txt
branches/Pre-Wx/fex/: File_Extractor2010.sln  File_Extractor2010.vcxproj  File_Extractor2010.vcxproj.filters  readme.txt
branches/Pre-Wx/src/: AutoBuild.h  NLS.h
branches/adamn-link/: CMakeLists.txt
branches/adamn-link/CMakeScripts/: CMakeASM_NASMInformation.cmake
branches/adamn-link/debian/: changelog  control  rules  vbam.1
branches/adamn-link/doc/: DevInfo.txt
branches/adamn-link/po/: CMakeLists.txt  gvbam.pot
branches/adamn-link/src/: vba-over.ini  version.h
branches/bgk-link/: CMakeLists.txt
branches/bgk-link/CMakeScripts/: FindSFML.cmake
branches/bgk-link/debian/: vbam-gtk.install
branches/bgk-link/doc/: License.txt
branches/bgk-link/fex/: File_Extractor2010.vcxproj.filters
branches/bgk-link/po/: CMakeLists.txt
branches/dependencies/fex/: internals.txt
branches/dependencies/libpng/: ANNOUNCE  CMakeLists.txt  TODO  configure  example.c  libpng.3  png.5  pngmem.c  pngset.c  pngtrans.c  pngwrite.c  pngwutil.c
branches/dependencies/msvc/: stdint.h
branches/emporerbranch/: CMakeLists.txt
branches/m4/: ChangeLog  Makefile.am  Makefile.in
branches/po/: ChangeLog  Makefile.in.in  Makevars  POTFILES.in  fr.gmo  fr.po  vba-1.7.2.pot  vba-1.8.0.pot
branches/qt/: CMakeLists.txt
branches/src/: 2xSaI.cpp  CheatSearch.h  GBA.cpp  GBA.h  GBAinline.h  Gfx.cpp  Makefile.am  Makefile.in  Mode2.cpp  RTC.cpp  Sound.cpp  Sound.h  Sram.cpp  Sram.h  Text.cpp  Text.h  Util.cpp  VisualBoyAdvance.cfg  agbprint.cpp  armdis.cpp  bilinear.cpp  bios.cpp  elf.cpp  elf.h  expr.l  expr.y  exprNode.cpp  exprNode.h  hq2x.cpp  interframe.cpp  interp.h  memgzio.c  memgzio.h  pixel.cpp  remote.cpp  simple2x.cpp  thumb.h  unzip.h
branches/vbam_libretro/: CMakeLists.txt
branches/win32/: GBA.dsp  GBA.dsw  GBA.vcproj  Makefile.am  Makefile.in  gba.sln  gba_sdl.dsp  gba_sdl.dsw  gba_sdl.sln  gba_sdl.vcproj  vba_vs2005.sln  vba_vs2005.vcproj
dependencies/libpng/: CHANGES  CMakeLists.txt  INSTALL  LICENSE  README  TODO  configure  libpng.3  libpng.sln  libpng.vcproj  libpng2008.vcproj  libpngpf.3  png.5  png.c  png.h  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrtran.c  pngrutil.c
fex/: .gitignore  CMakeLists.txt  File_Extractor2010.vcxproj  File_Extractor2010.vcxproj.filters  File_Extractor2013.vcxproj  internals.txt
fex/7z_C/: 7z.h  7zAlloc.c  7zAlloc.h  7zBuf.c  7zBuf.h  7zCrc.c  7zCrc.h  7zCrcOpt.c  7zDec.c  7zDecode.c  7zHeader.h  7zIn.c  7zStream.c  Bcj2.c  Bcj2.h  Bra.c  Bra.h  Bra86.c  CpuArch.c  CpuArch.h  Lzma2Dec.c  Lzma2Dec.h  LzmaDec.c  LzmaDec.h  Ppmd.h  Ppmd7.c  Ppmd7.h  Ppmd7Dec.c  Types.h
fex/fex/: Binary_Extractor.h  Data_Reader.cpp  Data_Reader.h  File_Extractor.h  Gzip_Extractor.h  Gzip_Reader.h  Zip7_Extractor.cpp  Zip7_Extractor.h  Zip_Extractor.h  Zlib_Inflater.h  blargg_common.h  blargg_errors.h  blargg_source.h  fex.cpp  fex.h
libresample-0.1.3/: Makefile.in  configure.in
src/core/: CMakeLists.txt
src/gtk/: CMakeLists.txt  cheatedit.cpp  cheatedit.h  cheatlist.cpp  cheatlist.h  configfile.cpp  configfile.h  directoriesconfig.cpp  directoriesconfig.h  displayconfig.cpp  displayconfig.h  filters.cpp  filters.h  gameboyadvancecheatlist.cpp  gameboyadvancecheatlist.h  gameboyadvanceconfig.cpp  gameboyadvanceconfig.h  gameboycheatlist.cpp  gameboycheatlist.h  gameboyconfig.cpp  gameboyconfig.h  generalconfig.cpp  generalconfig.h  gvbam.appdata.xml  gvbam.desktop  input.cpp  input.h  intl.h  joypadconfig.cpp  joypadconfig.h  main.cpp  menuitem.h  screenarea-cairo.cpp  screenarea-cairo.h  screenarea-gtk.cpp  screenarea-opengl.cpp  screenarea-opengl.h  screenarea-xvideo.cpp  screenarea.cpp  screenarea.h  (+12 more)
src/libretro/: CMakeLists.txt  Makefile  Makefile.common  SoundRetro.cpp  SoundRetro.h  UtilRetro.cpp  UtilRetro.h  configmanager.cpp  configmanager.h  gba-over.inc  libretro.cpp  libretro.h  libretro_core_options.h  libretro_core_options_intl.h  link.T  scrc32.cpp  scrc32.h  vbam_libretro.dylib  vbam_libretro.info  vbam_plus_libretro.info
src/sdl/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  SDL.cpp  VisualBoyAdvance.cfg-example  audio_sdl.cpp  audio_sdl.h  debugger.cpp  debugger.h  dictionary.c  dictionary.h  dummy.cpp  expr-lex.cpp  expr.cpp  expr.cpp.h  expr.l  expr.ypp  exprNode.cpp  exprNode.h  filters.cpp  filters.h  getopt.c  getopt.h  getopt1.c  iniparser.c  iniparser.h  inputSDL.cpp  inputSDL.h  sndSDL.cpp  text.cpp  text.h  vbam.cfg-example
src/wx/: .gitignore  AAPLShaderTypes.h  AAPLShaders.metal  CMakeLists.txt  VKMetalLayer.mm  android-compat.cpp  background-input.cpp  background-input.h  bin2c.c  blit.frag  blit.vert  check-pot-updated.cmake  cmdevents.cpp  compat_generic_file_dialog.h  copy-events.cmake  drawing.h  dsound.cpp  extra-translations.cpp  faudio.cpp  filters.h  gfxviewers.cpp  guiinit.cpp  hdr.cpp  hdr.h  interactive-pause.cmake  ioregs.h  link-static.cmake  linux-shell-wrapper.sh  mac-localizations.cmake  macsupport.mm  make-translations-zip.cmake  msys-link-static.cmake  openal.cpp  openal.h  opts.cpp  opts.h  panel.cpp  pre-build.cmd  rpi-host-path.h  rpi.h  (+35 more)
(+6083 files in other folders)
